2014-05-11  Kirit Saelensminde  <kirit@felspar.com>
 Allow the MIME headers to be cast to JSON.

2014-05-10  Kirit Saelensminde  <kirit@felspar.com>
Allow a termination lambda to also be passed into the HTTP server to control when to stop it. The lambda is only checked after a connection is opened.

2014-03-04  Kirit Saelensminde  <kirit@felspar.com>
 Hold the parser lock for a much shorter period when parsing a HTTP request to the web server.

2014-03-02  Kirit Saelensminde  <kirit@felspar.com>
 Alter the testing HTTP server request class so it can take a query string and the headers/body are optional.

2014-02-27  Kirit Saelensminde  <kirit@felspar.com>
 The `fostlib::url::query_string` class can now also be used to parse the standard format query string on the server side. The HTTP server query string is also now always a `url::query_string` instance.

2014-02-23  Kirit Saelensminde  <kirit@felspar.com>
 The MIME header names and values need to be retrievable in a case-insensitive manner as not everybody agrees on the correct case.

2014-02-22  Kirit Saelensminde  <kirit@felspar.com>
 Folding of long lines in MIME headers needs to be conditional on the protocol because most MIME protocols use it, but HTTP does not and some web servers don't handle folded lines.

2012-11-09  Kirit Saelensminde  <kirit@felspar.com>
 Allow the SMTP port to be set on the SMTP client and the tests.

2012-08-08  Kirit Saelensminde  <kirit@felspar.com>
 The URL parser (string constructor) now acquires the parser lock. This should help stop Boost Spirit failures.

2012-07-05  Kirit Saelensminde  <kirit@felspar.com>
 Changed some log output for the HTTP server to produce JSON objects rather than an array.

2012-07-03  Kirit Saelensminde  <kirit@felspar.com>
 Support the clang toolset in the compile script.
 Removed some dead code.

2012-04-14  Kirit Saelensminde  <kirit@felspar.com>
 Exposed the HTTP server's status codes as text.

2012-01-30  Kirit Saelensminde  <kirit@felspar.com>